--- a/server/Pipfile
+++ b/server/Pipfile
@@ -8,6 +8,9 @@ flask = "*"
 flask-migrate = "*"
 faker = "*"
 flask-jwt-extended = "*"
+flask-sqlalchemy = "*"
+werkzeug = "*"
+sqlalchemy-serializer = "*"
 
 [dev-packages]
 
