--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -14,6 +14,8 @@ sqlalchemy = "*"
 werkzeug = "*"
 flask-bcrypt = "*"
 sqlalchemy-serializer = "*"
+psycopg2-binary = "*"
+gunicorn = "*"
 
 [dev-packages]
 
